@@ -340,7 +340,7 @@ d4a = list(nstate=3, nonzero = c(4, 7, 8),
                r1 <- tmat[1,2]; r2 <- tmat[1,3]; r3 <- tmat[2,3]
                d1 <- r3- (r1 + r2)
                e1 <- exp(-(r1 + r2)*time)               
-               if (r1 + r2 + r3 < eps) array(0, 3, 3, 3)
+               if (r1 + r2 + r3 < eps) array(0, dim=c(3, 3, 3))
                else if (r3 < eps)  sexpm["3a"]$deriv(tmat, time, eps)
                else if (abs(d1) < eps) {
                    temp1 <- c(-time* e1, 0, 0,
